--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>eaglercraft</title>
+    <title>PDF and Doc Viewer</title>
   </head>
   <body style="margin: 0px; width: 100vw; height: 100vh; onclick="window.focus()"; id="game_frame" onclick="window.focus()"></body>
-  <form action="https://google.com">
-    <input type="submit" value="Go to Google" />
+  <form action="https://00f8.github.io/CaseClicker/">
+    <input type="submit" value="Go to CaseClicker" />
+</form>
+  <form action="https://00f8.github.io/z12cnvmad">
+    <input type="submit" value="Go to EaglerCraft" />
 </form>
 </html>
