--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>PDF and Doc Viewer</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body style="margin: 0px; width: 100vw; height: 100vh; onclick="window.focus()"; id="game_frame" onclick="window.focus()"></body>
   <form action="https://00f8.github.io/CaseClicker/">
