--- a/index.html
+++ b/index.html
@@ -4,11 +4,6 @@
     <title>PDF and Doc Viewer</title>
     <link rel="stylesheet" href="style.css">
   </head>
-  <body style="margin: 0px; width: 100vw; height: 100vh; onclick="window.focus()"; id="game_frame" onclick="window.focus()"></body>
-  <form action="https://00f8.github.io/CaseClicker/">
-    <input type="submit" value="Go to CaseClicker" />
-</form>
-  <form action="https://00f8.github.io/z12cnvmad">
-    <input type="submit" value="Go to EaglerCraft" />
-</form>
+<button onclick="window.location.href = '\z12cnvmad/index.html';" class="button-3" role="button">Eagler Craft</button>
+<button onclick="window.location.href = '\CaseClicker/index.html';" class="button-3" role="button">Case Clicker</button>
 </html>
